<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="horizontal"
    tools:context=".StartButtonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="45dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/math_challenge"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp">

        </TextView>

        <Button
            android:id="@+id/bt_start"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onStartClick"
            android:text="@string/start"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/bt_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:onClick="onHistoryClick"
            android:text="@string/history_record"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/ly_timer"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="50dp">

            </TextView>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>